<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/backgroundMain"
    tools:context=".MainActivity2">

    <!-- Encabezado con título -->
    <TextView
        android:id="@+id/tituloActivity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloActivity2"
        android:textColor="@color/text"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="16dp" />

    <!-- Área para mostrar los resultados -->
    <!-- ScrollView para las variables seleccionadas -->
    <ScrollView
        android:id="@+id/scrollVariablesSeleccionadas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tituloActivity2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:padding="8dp">

            <TextView
                android:id="@+id/textVariablesSeleccionadas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textVariablesSeleccionadas"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/text2VariablesSeleccionadas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text2VariablesSeleccionadas"
                android:textColor="@color/text"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <!-- ScrollView para los cálculos y el mensaje final -->
    <ScrollView
        android:id="@+id/scrollCalculos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/scrollVariablesSeleccionadas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:padding="8dp"
            android:elevation="4dp">

            <TextView
                android:id="@+id/textResultadosCalculos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textResultadosCalculos"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingBottom="8dp" />
            <TextView
                android:id="@+id/text2ResultadosCalculos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text2ResultadosCalculos"
                android:textColor="@color/text"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/textoCalculoFinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textoCalculoFinal"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/scrollCalculos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón para volver a la actividad inicial -->
    <Button
        android:id="@+id/buttonVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/buttonVolver"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/textoCalculoFinal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
